# spinza-contract

./: .gitignore  Anchor.toml  Cargo.toml  DEPLOYMENT_CHECKLIST.md
.github/workflows/: deploy.yml
programs/spinza/: Cargo.toml
programs/spinza/src/: lib.rs
scripts/: initialize.js
spinza-deployment/: Cargo.toml  README.md  gitignore.txt  setup.sh
spinza-deployment/scripts/: package.json  test-deployment.js
spinza-deployment/workflows/: deploy.yml
