[package]
name = "spinza"
version = "0.1.0"
description = "Spinza.io Solana betting game smart contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spinza"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
solana-program = "~1.18.0"
switchboard-v2 = "0.4.0"